# ytdownloader

./: .gitignore  README.md  fix_icon.py  index.html  install_deps.ps1  package-lock.json  package.json  vite.config.js  ytclip.py
.github/workflows/: build.yml  self-hosted.yml  test.yaml  test.yml
src/: App.css  App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
