[package]
name = "yt-downloader"
version = "0.1.0"
description = "YouTube Video Downloader and Clip Extractor"
authors = ["Antigravity"]
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6", features = [ "dialog-all", "shell-open", "shell-execute", "path-all"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
url = "2.2"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs, it is executed with `custom-protocol` feature
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
