[package]
name = "yt-downloader"
version = "0.1.0"
description = "YouTube Video Downloader and Clip Extractor"
authors = ["Antigravity"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6", features = ["shell-all", "path-all", "protocol-all"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
